<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="2" >


    <TextView
            android:id="@+id/tituloLivro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/titulo_livro" />

    <TextView
            android:id="@+id/tvAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:text="@string/autor" />

    <TextView
            android:id="@+id/tvEditora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="5dp"
            android:text="@string/editora" />
</GridLayout>