<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.dev.salatiel.homelibrary.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Cadastro Usuário"
            android:id="@+id/tvTitleCadUsuario"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtNome"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentLeft="true"
            android:inputType="text"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:hint="@string/nome"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:layout_below="@+id/edtNome"
            android:layout_alignParentLeft="true"
            android:inputType="textEmailAddress"
            android:layout_alignParentStart="true"
            android:hint="@string/email"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtSenha"
            android:layout_below="@+id/edtEmail"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:hint="@string/senha"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtConfirmacaoSenha"
            android:layout_below="@+id/edtSenha"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:layout_alignParentStart="true"
            android:hint="@string/confirmacao_senha"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    <Button
            android:text="@string/gravar"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGravarUsuario"
            android:layout_below="@+id/edtConfirmacaoSenha"
            android:layout_marginTop="30dp"
            android:layout_alignStart="@+id/edtSenha"
            android:layout_alignEnd="@+id/edtSenha"/>

</RelativeLayout>
